objects/Subsidiary_Company__c/Subsidiary_Company__c.object-meta.xml
<CustomObject>
    <label>Subsidiary Company</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiary Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>