objects/Subsidiary_Company__c/fields/Billing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule</label>
    <referenceTo>Billing_Rule__c</referenceTo>
    <relationshipLabel>Subsidiary Companies</relationshipLabel>
    <relationshipName>Subsidiary_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>