objects/Subsidiary_Company__c/fields/Customer_Numbering_Series__c.field-meta.xml
<CustomField>
    <fullName>Customer_Numbering_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Numbering Series</label>
    <referenceTo>Numbering_Series__c</referenceTo>
    <relationshipLabel>Subsidiary Companies</relationshipLabel>
    <relationshipName>Subsidiary_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>