objects/Subsidiary_Company__c/fields/Disable_Customer_Portal__c.field-meta.xml
<CustomField>
    <fullName>Disable_Customer_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Customer Portal</label>
    <type>Checkbox</type>
</CustomField>