objects/Subsidiary_Company__c/fields/Disable_Prospect_Conversion_Email__c.field-meta.xml
<CustomField>
    <fullName>Disable_Prospect_Conversion_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Prospect Conversion Email</label>
    <type>Checkbox</type>
</CustomField>