objects/Subsidiary_Company__c/fields/ESIC_Surcharge_Cost_Pct__c.field-meta.xml
<CustomField>
    <fullName>ESIC_Surcharge_Cost_Pct__c</fullName>
    <label>ESIC Surcharge Cost %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>