objects/Subsidiary_Company__c/fields/PA_Rep_Sign_Col_Label__c.field-meta.xml
<CustomField>
    <fullName>PA_Rep_Sign_Col_Label__c</fullName>
    <label>Representative Signature Column Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>