objects/Subsidiary_Company__c/fields/QtC_Enabled__c.field-meta.xml
<CustomField>
    <fullName>QtC_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QtC Enabled?</label>
    <type>Checkbox</type>
</CustomField>