objects/Subsidiary_Company__c/fields/Watermark__c.field-meta.xml
<CustomField>
    <fullName>Watermark__c</fullName>
    <label>Watermark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>