objects/Subsidiary_Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QtC_Enabled__c</columns>
    <columns>Billing_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>